--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://192.168.88.95:5432/TestDB?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://192.168.88.95:5432/TestDB
+spring.datasource.username=TestUser
+spring.datasource.password=testpassword
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#hibernate.dialect=PostgreSQL82Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
