--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://192.168.88.95:5432/TestDB
 spring.datasource.username=TestUser
 spring.datasource.password=testpassword
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #hibernate.dialect=PostgreSQL82Dialect
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect 
 spring.jpa.show-sql=false
+hibernate.jdbc.lob.non_contextual_creation=true
