--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.username=TestUser
 spring.datasource.password=testpassword
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-#hibernate.dialect=PostgreSQL82Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect 
 spring.jpa.show-sql=false
-hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
