--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:postgresql://192.168.88.95:5432/TestDB
+#spring.datasource.username=TestUser
+#spring.datasource.password=testpassword
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://192.168.88.95:5432/TestDB
-spring.datasource.username=TestUser
-spring.datasource.password=testpassword
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect 
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.datasource.url=jdbc:mysql://localhost:3306/bank?autoReconnect=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
